add support for Debian , Fedora .

--- a/templates/config.hcl.erb
+++ b/templates/config.hcl.erb
@@ -1,3 +1,5 @@
+# [Note]: This file is managed by Puppet.
+
 backend "consul" {
   address = "<%= scope.lookupvar('vault::backend_address') %>:<%= scope.lookupvar('vault::backend_port') %>"
   path = "vault"
